--- a/scripts/config/gripper_4DOF_config.json
+++ b/scripts/config/gripper_4DOF_config.json
@@ -6,8 +6,8 @@
     "torque_limit": 280,
     "speed_limit": 280,
     "num_motors": 4,
-    "min_value": [440, 260, 500, 510],
-    "max_value": [500, 510, 580, 760],
+    "min_values": [440, 260, 500, 510],
+    "max_values": [500, 510, 580, 760],
     "home_pose": [440, 510, 580, 510],
     "actuated_target": false
 }
