--- a/scripts/config/gripper_9DOF_config.json
+++ b/scripts/config/gripper_9DOF_config.json
@@ -6,8 +6,8 @@
     "torque_limit": 280,
     "speed_limit": 280,
     "num_motors": 9,
-    "min_value": [100, 250, 130, 100, 198, 152, 100, 250, 140],
-    "max_value": [900, 750, 769, 900, 750, 802, 900, 750, 794],
+    "min_values": [100, 250, 130, 100, 198, 152, 100, 250, 140],
+    "max_values": [900, 750, 769, 900, 750, 802, 900, 750, 794],
     "home_pose": [512, 250, 750, 512, 250, 750, 512, 250, 750],
     "actuated_target": false
 }
