dev work towards velocity control

--- a/scripts/config/gripper_4DOF_config_ID2.json
+++ b/scripts/config/gripper_4DOF_config_ID2.json
@@ -13,7 +13,7 @@
     "num_motors": 4,
     "min_values": [440, 260, 500, 510],
     "max_values": [500, 510, 580, 760],
-    "home_pose": [440, 510, 580, 510],
+    "home_pose": [[440, 510, 580, 510]],
 
     "actuated_target": false
 }
