--- a/scripts/config/gripper_9DOF_config.json
+++ b/scripts/config/gripper_9DOF_config.json
@@ -3,13 +3,13 @@
     "gripper_id": 9,
     "device_name": "/dev/ttyUSB0",
     "baudrate": 1000000,
-    "torque_limit": 350,
+    "torque_limit": 300,
     "speed_limit": 280,
     "velocity_min": -50,
     "velocity_max": 50,
     "num_motors": 9,
     "min_values": [100, 250, 130, 100, 198, 152, 100, 250, 140],
     "max_values": [900, 750, 820, 900, 750, 820, 900, 750, 820],
-    "home_sequence":  [[100, 512, 820, 100, 512, 820, 100, 512, 820],[900, 512, 820, 900, 512, 820, 900, 512, 820],[512, 250, 750, 512, 250, 750, 512, 250, 750]],
+    "home_sequence":  [[100, 512, 820, 100, 512, 820, 100, 512, 820],[900, 512, 820, 900, 512, 820, 900, 512, 820],[900, 512, 512, 900, 512, 512, 900, 512, 512],[512, 250, 750, 512, 250, 750, 512, 250, 750]],
     "actuated_target": false
 }
