--- a/scripts/config/gripper_9DOF_config.json
+++ b/scripts/config/gripper_9DOF_config.json
@@ -10,6 +10,6 @@
     "num_motors": 9,
     "min_values": [100, 250, 130, 100, 198, 152, 100, 250, 140],
     "max_values": [900, 750, 820, 900, 750, 820, 900, 750, 820],
-    "home_sequence":  [[100, 512, 820, 100, 512, 820, 100, 512, 820],[900, 512, 820, 900, 512, 820, 900, 512, 820],[900, 512, 512, 900, 512, 512, 900, 512, 512],[512, 250, 750, 512, 250, 750, 512, 250, 750]],
+    "home_sequence":  [[100, 250, 130, 100, 198, 152, 100, 250, 140],[512, 250, 750, 512, 250, 750, 512, 250, 750]],
     "actuated_target": false
 }
