--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 backoff==2.2.1
-matplotlib==3.1.3
-numpy==1.18.5
+cares_lib.egg==info
+cares_reinforcement_learning.egg==info
+dynamixel_sdk==3.7.31
+matplotlib==3.6.2
+numpy==1.17.4
 opencv_contrib_python==4.6.0.66
-pyserial==3.5
-slackclient==2.9.4
-torch==1.6.0
+pandas==1.5.2
+pydantic==1.10.7
+pytimedinput==2.0.1
+torch==1.13.1
