--- a/scripts/config_examples/gripper_xDOF_config_IDx.json
+++ b/scripts/config_examples/gripper_xDOF_config_IDx.json
@@ -8,6 +8,9 @@
     "torque_limit": 300,
     "speed_limit":  300,
 
+    "velocity_min": -150,
+    "velocity_max": 150,
+
     "num_motors": 4,
     "min_values": [412, 200, 512, 512],
     "max_values": [512, 512, 612, 800],
@@ -16,5 +19,3 @@
 
     "actuated_target": true
 }
-
-
