feat: magnet object wip, just need tidy

--- a/scripts/config_examples/env_xDOF_config_IDx.json
+++ b/scripts/config_examples/env_xDOF_config_IDx.json
@@ -1,8 +1,8 @@
 {
     "env_type": 0,
-    "camera_id": 0,
     
-    "object_type": 0,
+    "camera_id": 0,
+    "blindable": 1,
     "observation_type": 2,
     "action_type": "velocity",
     
