--- a/scripts/config_examples/object_config_IDx.json
+++ b/scripts/config_examples/object_config_IDx.json
@@ -1,5 +1,6 @@
 {
     "object_type": "magnet",
+    "object_observation_mode": "actual",
     "object_marker_id": 4,
 
     "device_name": "/dev/ttyACM0",
